Added can_edit and is_admin fields to Users.
This is to avoid security issues. Tests are passing, but don't fully test
the default use case (which is that a user signs up, but cannot edit). This
will be updated in a future release, as will permission management.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,6 +12,8 @@ foo:
   activated: true
   activated_at: 2015-11-02 16:00:00
   remember_digest:
+  can_edit: true
+  is_admin: false
 
 bar:
   username: barster
@@ -23,3 +25,5 @@ bar:
   activated: true
   activated_at: 2015-11-02 16:00:00
   remember_digest:
+  can_edit: true
+  is_admin: false
